--- a/package.json
+++ b/package.json
@@ -176,6 +176,8 @@
     "@types/terser-webpack-plugin": "^5.2.0",
     "@types/webpack-env": "^1.16.3",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@webpack-cli/generators": "^2.4.1",
+    "autoprefixer": "^10.4.2",
     "browserslist-config-erb": "^0.0.3",
     "chalk": "^4.1.2",
     "concurrently": "^6.4.0",
@@ -210,6 +212,8 @@
     "lint-staged": "^11.2.6",
     "mini-css-extract-plugin": "^2.4.5",
     "opencollective-postinstall": "^2.0.3",
+    "postcss": "^8.4.5",
+    "postcss-loader": "^6.2.1",
     "prettier": "^2.5.1",
     "react-refresh": "^0.10.0",
     "react-refresh-typescript": "^2.0.3",
@@ -218,6 +222,7 @@
     "sass": "^1.45.0",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
+    "tailwindcss": "^3.0.12",
     "terser-webpack-plugin": "^5.2.5",
     "ts-jest": "^27.1.1",
     "ts-loader": "^9.2.6",
@@ -227,8 +232,9 @@
     "webpack": "^5.65.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0",
-    "webpack-merge": "^5.8.0"
+    "webpack-dev-server": "^4.7.2",
+    "webpack-merge": "^5.8.0",
+    "workbox-webpack-plugin": "^6.4.2"
   },
   "dependencies": {
     "@typescript-eslint/parser": "^5.7.0",
