--- a/package.json
+++ b/package.json
@@ -245,6 +245,7 @@
     "electron-updater": "^4.6.1",
     "fs": "0.0.1-security",
     "history": "4.x.x",
+    "node-fetch": "^3.2.2",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
