--- a/package.json
+++ b/package.json
@@ -245,10 +245,11 @@
     "electron-updater": "^4.6.1",
     "fs": "0.0.1-security",
     "history": "4.x.x",
-    "node-fetch": "^3.2.2",
+    "node-fetch": "^3.2.3",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "regenerator-runtime": "^0.13.9",
     "wpilib-nt-client": "^1.7.2"
