--- a/package.json
+++ b/package.json
@@ -239,7 +239,8 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
-    "regenerator-runtime": "^0.13.9"
+    "regenerator-runtime": "^0.13.9",
+    "tree-kill": "^1.2.2"
   },
   "devEngines": {
     "node": ">=14.x",
