--- a/package.json
+++ b/package.json
@@ -237,6 +237,7 @@
     "history": "^5.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hotkeys-hook": "^3.4.4",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "regenerator-runtime": "^0.13.9",
