--- a/package.json
+++ b/package.json
@@ -240,6 +240,7 @@
     "react-hotkeys-hook": "^3.4.4",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
+    "react-toastify": "^8.2.0",
     "regenerator-runtime": "^0.13.9",
     "tree-kill": "^1.2.2"
   },
